samples/_failures_safe/1761369879_b0b4df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6570fa6b.c: In function ‘main’:
./samples/SAFE/__tmp_6570fa6b.c:145:12: error: missing terminating " character
  145 |     printf("4:
      |            ^~~
./samples/SAFE/__tmp_6570fa6b.c:145:5: error: expected expression at end of input
  145 |     printf("4:
      |     ^~~~~~
./samples/SAFE/__tmp_6570fa6b.c:145:5: error: expected declaration or statement at end of input
